# tamil-kids-news-service

./: .replit  README.md  pyproject.toml
Tamil-Kids-News-Service/: requirements.txt
Tamil-Kids-News-Service/app/templates/: base.html  edit.html
Tamil-Kids-News-Service/src/: main.py  translation.py  tts.py
app/: app.py
app/templates/: generate.html  index.html  scrapper.html  view.html
data/: approved_news.json  podcast_20250318_084904_447f4122.txt  podcast_20250319_101231_db1a1dc5.txt  processed_news.json
src/: main.py  translation.py  tts.py  utils.py
