[tool.poetry]
name = "tamil-kids-news-service"
version = "0.1.0"
description = "A service that scrapes news headlines, translates them to Tamil and converts to audio for kids"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
feedparser = "^6.0.10"
langdetect = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"